src/objects/Apttus_Config2__ProductAttributeRule__c.object
<CustomObject>
    <description>Represents the rule defintion of a product attribute value.</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AccountScopeOper__c</fullName>
        <description>The account scope operator</description>
        <inlineHelpText>The account scope operator</inlineHelpText>
        <label>Account Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AccountScope__c</fullName>
        <description>One or more accounts associated with the rule</description>
        <inlineHelpText>One or more accounts associated with the rule</inlineHelpText>
        <label>Account Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the rule is active</description>
        <inlineHelpText>Indicates whether the rule is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConditionCriteriaExpression__c</fullName>
        <description>The rule criteria expression</description>
        <inlineHelpText>The rule criteria expression</inlineHelpText>
        <label>Condition Criteria Expression</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConditionCriteria__c</fullName>
        <description>The rule criteria specification</description>
        <inlineHelpText>The rule criteria specification</inlineHelpText>
        <label>Condition Criteria</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The rule description</description>
        <inlineHelpText>The rule description</inlineHelpText>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveDate__c</fullName>
        <description>Start date when the rule will be effective.</description>
        <inlineHelpText>Leave this blank for always effective.</inlineHelpText>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpirationDate__c</fullName>
        <description>End date when rule will stop triggering.</description>
        <inlineHelpText>Leave this blank for always effective rule.</inlineHelpText>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamilyScopeOper__c</fullName>
        <description>The product family scope operator</description>
        <inlineHelpText>The product family scope operator</inlineHelpText>
        <label>Product Family Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                    <default>true</default>
                    <label>in</label>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamilyScope__c</fullName>
        <description>One or more product families associated with the rule</description>
        <inlineHelpText>One or more product families associated with the rule</inlineHelpText>
        <label>Product Family Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductGroupScopeOper__c</fullName>
        <description>The product group scope operator</description>
        <inlineHelpText>The product group scope operator</inlineHelpText>
        <label>Product Group Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                    <default>true</default>
                    <label>in</label>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductGroupScope__c</fullName>
        <description>One or more product groups associated with the rule</description>
        <inlineHelpText>One or more product groups associated with the rule</inlineHelpText>
        <label>Product Group Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductScopeOper__c</fullName>
        <description>The product scope operator</description>
        <inlineHelpText>The product scope operator</inlineHelpText>
        <label>Product Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                    <default>true</default>
                    <label>in</label>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductScope__c</fullName>
        <description>One or more products associated with the rule</description>
        <inlineHelpText>One or more products associated with the rule</inlineHelpText>
        <label>Product Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Attribute Rule</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Config2__Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Attribute Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>